--- a/.github/workflows/tryhackme-badge-workflow.yml
+++ b/.github/workflows/tryhackme-badge-workflow.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: ./
+      - uses: Chetan-Chinchulkar/tryhackme-badge-workflow@main
         with:
           # Replace with your tryhackme username
           username: "Omnipresent.1802"
