--- a/.github/workflows/tryhackme-badge-workflow.yml
+++ b/.github/workflows/tryhackme-badge-workflow.yml
@@ -14,5 +14,5 @@ jobs:
       - uses: p4p1/tryhackme-badge-workflow@main
         with:
           # Replace with your tryhackme username
-          username: "Omnipresent.1802"
+          username: "omnipresent"
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
