--- a/.github/workflows/tryhackme-badge-action-workflow.yml
+++ b/.github/workflows/tryhackme-badge-action-workflow.yml
@@ -1,4 +1,3 @@
-
 name: Update TryHackMe Badge
 
 on:
@@ -8,17 +7,20 @@ on:
 
 jobs:
   update-badge:
-    runs-on: ubuntu-latest
-
+    runs-on: ubuntu-22.04
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    - name: Configure Git Identity
+      run: |
+        git config --global user.name "GitHub Actions Bot"
+        git config --global user.email "actions@github.com"
+
     - name: Fetch TryHackMe Badge
-      # uses: Chetan-Chinchulkar/tryhackme-badge-action-workflow@main
-      uses: DhanushNehru/tryhackme-badge-action-workflow@v1.0
+      uses: Chetan-Chinchulkar/tryhackme-badge-action-workflow@v1.0
       with:
         image_path: './assets/tryhackme-badge.png'
-        username: ${{ secrets.THM_USERNAME }}
         user_id: ${{ secrets.THM_USER_ID }}
+        username: ${{ secrets.THM_USERNAME }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
