--- a/.github/workflows/tryhackme-badge-action-workflow.yml
+++ b/.github/workflows/tryhackme-badge-action-workflow.yml
@@ -18,9 +18,10 @@ jobs:
         git config --global user.email "actions@github.com"
 
     - name: Fetch TryHackMe Badge
-      uses: Chetan-Chinchulkar/tryhackme-badge-action-workflow@v1.0
+      uses: Chetan-Chinchulkar/tryhackme-badge-action-workflow@main
       with:
         image_path: './assets/tryhackme-badge.png'
         user_id: ${{ secrets.THM_USER_ID }}
         username: ${{ secrets.THM_USERNAME }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        committer_name: ${{ secrets.committer_name }}
