--- a/.github/workflows/tryhackme-badge-action-workflow.yml
+++ b/.github/workflows/tryhackme-badge-action-workflow.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Fetch TryHackMe Badge
-        uses: geeekgod/tryhackme-badge-action@v1.0
+        uses: Chetan-Chinchulkar/tryhackme-badge-action@main
         with:
           image_path: './assets/tryhackme-badge.png'
           username: ${{ secrets.THM_USERNAME }}
